--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=1024, initial-scale=0.78, maximum-scale=0.78, user-scalable=no" />
+  <meta name="viewport" content="width=1024, initial-scale=0.78, maximum-scale=0.78" />
   <title>Gerenciamento de Gado</title>
   <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/6024/6024289.png" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
